--- a/app/about.html
+++ b/app/about.html
@@ -20,7 +20,7 @@
                     <div class="container">
                         <div class="header__top-inner">
                             <div class="header__logo">
-                                <a href="#">
+                                <a href="https://saturdayin.github.io/moderno/app/index.html">
                                     <img src="images/logo.png" alt="">
                                 </a>
                             </div>
