--- a/app/contacts.html
+++ b/app/contacts.html
@@ -20,13 +20,13 @@
                     <div class="container">
                         <div class="header__top-inner">
                             <div class="header__logo">
-                                <a href="#">
+                                <a href="https://saturdayin.github.io/moderno/app/index.html">
                                     <img src="images/logo.png" alt="">
                                 </a>
                             </div>
 
                             <div class="header__text">
-                                <a href="#">
+                                <a href="">
                                     <span>Need help?</span>
                                 </a>
                                 Talk to an expert:
